@@ -1,0 +1,7 @@
+##parameters=
+# $Id$
+"""
+Override CMF's personalize that is not applicable and causes problems.
+"""
+
+return
