@@ -19,6 +19,7 @@ Bug fixes:
 - Fixed utils.computeContributors to use _getEntry.
 - Fixed typo in security declaration for MembershipTool.getEmailFromUsername
 - Fixed typo in 'content_lib_info_simple.pt'
+- #241: disallow call of CMF's personalize_form which isn't applicable to CPS.
 CPS internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - CPSTestCase set the new TreeCacheManager to sync for the tests
